--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/stack": "^5.0.3",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
-    "expo": "~36.0.0",
+    "expo": "^38.0.0",
     "firebase": "^7.14.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
